src/deployment/nodejam-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notejam-ingress
  namespace: ingress-notejam
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - nordcloud.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: nordcloud.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: aks-notejam
              servicePort: 80
            path: /(.*)
